--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: libminer2
-Title: What the Package Does (One Line, Title Case)
+Title: Explore R Libraries
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person(
+    "Martin", "Monkman", , 
+    "monkmanmh@yahoo.ca", role = c("aut", "cre"),
+           comment = c(ORCID = "YOUR-ORCID-ID")
+           )
+Description: Provides functions for learning about your R libraries, and the packages you have installed.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+URL: https://github.com/MonkmanMH/libminer2
+BugReports: https://github.com/MonkmanMH/libminer2/issues
