--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/MonkmanMH/libminer2
+URL: https://github.com/MonkmanMH/libminer2, https://monkmanmh.github.io/libminer2/
 BugReports: https://github.com/MonkmanMH/libminer2/issues
 Suggests: 
     testthat (>= 3.0.0)
